syntax = "proto3";

package calculator;

option go_package="calculator/calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest{
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 prime_number = 1;
}


message ComputeAverageRequest {
  int64 number = 1;
}

message ComputeAverageResponse {
  double result = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

service CalculatorService {
  //unary
  rpc Sum(SumRequest) returns (SumResponse) {};

  //Server Streaming
  rpc PrimeNumber(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

  // Client Streaming
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

  //BiDi streaming
  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}